// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderFlutter matches the snapshot for multi-version.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer hightouch_events v1.2.0 or later.

import 'package:hightouch_events/analytics.dart';
import 'package:hightouch_events/event.dart';

import 'dart:convert';

class TrackOrderCompletedV1 {
    final String? orderId;

    TrackOrderCompletedV1({
        this.orderId,
    });

    factory TrackOrderCompletedV1.fromMap(Map<String, dynamic> json) => TrackOrderCompletedV1(
        orderId: json["orderId"],
    );

    Map<String, dynamic> toMap() => {
        "orderId": orderId,
    };
}

class TrackOrderCompletedV2 {
    final String? orderId;
    final double? total;

    TrackOrderCompletedV2({
        this.orderId,
        this.total,
    });

    factory TrackOrderCompletedV2.fromMap(Map<String, dynamic> json) => TrackOrderCompletedV2(
        orderId: json["orderId"],
        total: json["total"]?.toDouble(),
    );

    Map<String, dynamic> toMap() => {
        "orderId": orderId,
        "total": total,
    };
}

class _Injected {
    final Map<String, dynamic> data;
    final Map<String, dynamic>? context;
    _Injected(this.data, this.context);
}

class HtEvents {
    final Analytics _analytics;

    HtEvents(this._analytics);

    Map<String, dynamic> _cloneMap(Map<String, dynamic>? map) {
        final out = <String, dynamic>{};
        if (map == null) {
            return out;
        }
        map.forEach((key, value) {
            out[key] = value;
        });
        return out;
    }

    Map<String, dynamic> _compact(Map<String, dynamic> map) {
        final out = <String, dynamic>{};
        map.forEach((key, value) {
            if (value == null) {
                return;
            }
            if (value is Map) {
                out[key] = _compact(Map<String, dynamic>.from(value));
            } else {
                out[key] = value;
            }
        });
        return out;
    }

    Map<String, dynamic> _toJsonMap(dynamic value) {
        if (value == null) {
            return <String, dynamic>{};
        }
        if (value is Map<String, dynamic>) {
            return _compact(value);
        }
        final mapped = value.toMap();
        if (mapped is Map) {
            return _compact(Map<String, dynamic>.from(mapped));
        }
        return <String, dynamic>{};
    }

    Map<String, dynamic> _setAtPath(
        Map<String, dynamic> root,
        List<String> path,
        String value,
    ) {
        if (path.isEmpty) {
            return _cloneMap(root);
        }
        final clone = _cloneMap(root);
        var cursor = clone;
        for (var i = 0; i < path.length - 1; i++) {
            final key = path[i];
            final existing = cursor[key];
            final child = existing is Map
                ? _cloneMap(Map<String, dynamic>.from(existing))
                : <String, dynamic>{};
            cursor[key] = child;
            cursor = child;
        }
        cursor[path.last] = value;
        return clone;
    }

    Map<String, dynamic> _deepMerge(
        Map<String, dynamic> base,
        Map<String, dynamic> extra,
    ) {
        final out = _cloneMap(base);
        extra.forEach((key, value) {
            final existing = out[key];
            if (value is Map && existing is Map) {
                out[key] = _deepMerge(
                    Map<String, dynamic>.from(existing),
                    Map<String, dynamic>.from(value),
                );
            } else {
                out[key] = value;
            }
        });
        return out;
    }

    EnrichmentClosure? _contextEnrichment(Map<String, dynamic>? extra) {
        if (extra == null || extra.isEmpty) {
            return null;
        }
        return (event) {
            final existing = event.context;
            if (existing == null) {
                return event;
            }
            event.context = Context.fromJson(_deepMerge(existing.toJson(), extra));
            return event;
        };
    }

    _Injected _withSchemaVersion(
        Map<String, dynamic> data,
        Map<String, dynamic>? context,
        List<String> path,
        String version,
        String envelopeKey,
    ) {
        if (path.isEmpty) {
            return _Injected(data, context);
        }
        final head = path.first;
        final rest = path.sublist(1);
        if (head == envelopeKey) {
            return _Injected(_setAtPath(_cloneMap(data), rest, version), context);
        }
        if (head == "context") {
            return _Injected(
                data,
                _setAtPath(_cloneMap(context), rest, version),
            );
        }
        return _Injected(data, context);
    }

    Future<void> trackOrderCompletedV1(TrackOrderCompletedV1 properties, {Map<String, dynamic>? context}) {
        final injected = _withSchemaVersion(
            _toJsonMap(properties),
            context,
            const <String>[],
            "v1",
            "properties",
        );
        return _analytics.track(
            "Order Completed",
            properties: injected.data,
            enrichment: _contextEnrichment(injected.context),
        );
    }

    Future<void> trackOrderCompletedV2(TrackOrderCompletedV2 properties, {Map<String, dynamic>? context}) {
        final injected = _withSchemaVersion(
            _toJsonMap(properties),
            context,
            const <String>[],
            "v2",
            "properties",
        );
        return _analytics.track(
            "Order Completed",
            properties: injected.data,
            enrichment: _contextEnrichment(injected.context),
        );
    }

    Future<void> trackOrderCompleted(TrackOrderCompletedV2 properties, {Map<String, dynamic>? context}) {
        return trackOrderCompletedV2(properties, context: context);
    }
}
"
`;

exports[`renderFlutter matches the snapshot for simple-track.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer hightouch_events v1.2.0 or later.

import 'package:hightouch_events/analytics.dart';
import 'package:hightouch_events/event.dart';

import 'dart:convert';

class TrackOrderCompletedDefault {
    final String orderId;
    final double? total;

    TrackOrderCompletedDefault({
        required this.orderId,
        this.total,
    });

    factory TrackOrderCompletedDefault.fromMap(Map<String, dynamic> json) => TrackOrderCompletedDefault(
        orderId: json["orderId"],
        total: json["total"]?.toDouble(),
    );

    Map<String, dynamic> toMap() => {
        "orderId": orderId,
        "total": total,
    };
}

class _Injected {
    final Map<String, dynamic> data;
    final Map<String, dynamic>? context;
    _Injected(this.data, this.context);
}

class HtEvents {
    final Analytics _analytics;

    HtEvents(this._analytics);

    Map<String, dynamic> _cloneMap(Map<String, dynamic>? map) {
        final out = <String, dynamic>{};
        if (map == null) {
            return out;
        }
        map.forEach((key, value) {
            out[key] = value;
        });
        return out;
    }

    Map<String, dynamic> _compact(Map<String, dynamic> map) {
        final out = <String, dynamic>{};
        map.forEach((key, value) {
            if (value == null) {
                return;
            }
            if (value is Map) {
                out[key] = _compact(Map<String, dynamic>.from(value));
            } else {
                out[key] = value;
            }
        });
        return out;
    }

    Map<String, dynamic> _toJsonMap(dynamic value) {
        if (value == null) {
            return <String, dynamic>{};
        }
        if (value is Map<String, dynamic>) {
            return _compact(value);
        }
        final mapped = value.toMap();
        if (mapped is Map) {
            return _compact(Map<String, dynamic>.from(mapped));
        }
        return <String, dynamic>{};
    }

    Map<String, dynamic> _setAtPath(
        Map<String, dynamic> root,
        List<String> path,
        String value,
    ) {
        if (path.isEmpty) {
            return _cloneMap(root);
        }
        final clone = _cloneMap(root);
        var cursor = clone;
        for (var i = 0; i < path.length - 1; i++) {
            final key = path[i];
            final existing = cursor[key];
            final child = existing is Map
                ? _cloneMap(Map<String, dynamic>.from(existing))
                : <String, dynamic>{};
            cursor[key] = child;
            cursor = child;
        }
        cursor[path.last] = value;
        return clone;
    }

    Map<String, dynamic> _deepMerge(
        Map<String, dynamic> base,
        Map<String, dynamic> extra,
    ) {
        final out = _cloneMap(base);
        extra.forEach((key, value) {
            final existing = out[key];
            if (value is Map && existing is Map) {
                out[key] = _deepMerge(
                    Map<String, dynamic>.from(existing),
                    Map<String, dynamic>.from(value),
                );
            } else {
                out[key] = value;
            }
        });
        return out;
    }

    EnrichmentClosure? _contextEnrichment(Map<String, dynamic>? extra) {
        if (extra == null || extra.isEmpty) {
            return null;
        }
        return (event) {
            final existing = event.context;
            if (existing == null) {
                return event;
            }
            event.context = Context.fromJson(_deepMerge(existing.toJson(), extra));
            return event;
        };
    }

    _Injected _withSchemaVersion(
        Map<String, dynamic> data,
        Map<String, dynamic>? context,
        List<String> path,
        String version,
        String envelopeKey,
    ) {
        if (path.isEmpty) {
            return _Injected(data, context);
        }
        final head = path.first;
        final rest = path.sublist(1);
        if (head == envelopeKey) {
            return _Injected(_setAtPath(_cloneMap(data), rest, version), context);
        }
        if (head == "context") {
            return _Injected(
                data,
                _setAtPath(_cloneMap(context), rest, version),
            );
        }
        return _Injected(data, context);
    }

    Future<void> trackOrderCompletedDefault(TrackOrderCompletedDefault properties, {Map<String, dynamic>? context}) {
        final injected = _withSchemaVersion(
            _toJsonMap(properties),
            context,
            const ["context", "protocols", "schemaVersion"],
            "default",
            "properties",
        );
        return _analytics.track(
            "Order Completed",
            properties: injected.data,
            enrichment: _contextEnrichment(injected.context),
        );
    }

    Future<void> trackOrderCompleted(TrackOrderCompletedDefault properties, {Map<String, dynamic>? context}) {
        return trackOrderCompletedDefault(properties, context: context);
    }
}
"
`;

exports[`renderFlutter matches the snapshot for with-refs.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer hightouch_events v1.2.0 or later.

import 'package:hightouch_events/analytics.dart';
import 'package:hightouch_events/event.dart';

import 'dart:convert';

class IdentifyDefault {
    final String? email;

    IdentifyDefault({
        this.email,
    });

    factory IdentifyDefault.fromMap(Map<String, dynamic> json) => IdentifyDefault(
        email: json["email"],
    );

    Map<String, dynamic> toMap() => {
        "email": email,
    };
}

class TrackCartViewedDefault {
    final double amount;
    final String currency;
    final double? itemCount;

    TrackCartViewedDefault({
        required this.amount,
        required this.currency,
        this.itemCount,
    });

    factory TrackCartViewedDefault.fromMap(Map<String, dynamic> json) => TrackCartViewedDefault(
        amount: json["amount"]?.toDouble(),
        currency: json["currency"],
        itemCount: json["itemCount"]?.toDouble(),
    );

    Map<String, dynamic> toMap() => {
        "amount": amount,
        "currency": currency,
        "itemCount": itemCount,
    };
}

class _Injected {
    final Map<String, dynamic> data;
    final Map<String, dynamic>? context;
    _Injected(this.data, this.context);
}

class HtEvents {
    final Analytics _analytics;

    HtEvents(this._analytics);

    Map<String, dynamic> _cloneMap(Map<String, dynamic>? map) {
        final out = <String, dynamic>{};
        if (map == null) {
            return out;
        }
        map.forEach((key, value) {
            out[key] = value;
        });
        return out;
    }

    Map<String, dynamic> _compact(Map<String, dynamic> map) {
        final out = <String, dynamic>{};
        map.forEach((key, value) {
            if (value == null) {
                return;
            }
            if (value is Map) {
                out[key] = _compact(Map<String, dynamic>.from(value));
            } else {
                out[key] = value;
            }
        });
        return out;
    }

    Map<String, dynamic> _toJsonMap(dynamic value) {
        if (value == null) {
            return <String, dynamic>{};
        }
        if (value is Map<String, dynamic>) {
            return _compact(value);
        }
        final mapped = value.toMap();
        if (mapped is Map) {
            return _compact(Map<String, dynamic>.from(mapped));
        }
        return <String, dynamic>{};
    }

    Map<String, dynamic> _setAtPath(
        Map<String, dynamic> root,
        List<String> path,
        String value,
    ) {
        if (path.isEmpty) {
            return _cloneMap(root);
        }
        final clone = _cloneMap(root);
        var cursor = clone;
        for (var i = 0; i < path.length - 1; i++) {
            final key = path[i];
            final existing = cursor[key];
            final child = existing is Map
                ? _cloneMap(Map<String, dynamic>.from(existing))
                : <String, dynamic>{};
            cursor[key] = child;
            cursor = child;
        }
        cursor[path.last] = value;
        return clone;
    }

    Map<String, dynamic> _deepMerge(
        Map<String, dynamic> base,
        Map<String, dynamic> extra,
    ) {
        final out = _cloneMap(base);
        extra.forEach((key, value) {
            final existing = out[key];
            if (value is Map && existing is Map) {
                out[key] = _deepMerge(
                    Map<String, dynamic>.from(existing),
                    Map<String, dynamic>.from(value),
                );
            } else {
                out[key] = value;
            }
        });
        return out;
    }

    EnrichmentClosure? _contextEnrichment(Map<String, dynamic>? extra) {
        if (extra == null || extra.isEmpty) {
            return null;
        }
        return (event) {
            final existing = event.context;
            if (existing == null) {
                return event;
            }
            event.context = Context.fromJson(_deepMerge(existing.toJson(), extra));
            return event;
        };
    }

    _Injected _withSchemaVersion(
        Map<String, dynamic> data,
        Map<String, dynamic>? context,
        List<String> path,
        String version,
        String envelopeKey,
    ) {
        if (path.isEmpty) {
            return _Injected(data, context);
        }
        final head = path.first;
        final rest = path.sublist(1);
        if (head == envelopeKey) {
            return _Injected(_setAtPath(_cloneMap(data), rest, version), context);
        }
        if (head == "context") {
            return _Injected(
                data,
                _setAtPath(_cloneMap(context), rest, version),
            );
        }
        return _Injected(data, context);
    }

    Future<void> identifyDefault({String? userId, required IdentifyDefault traits, Map<String, dynamic>? context}) {
        final injected = _withSchemaVersion(
            _toJsonMap(traits),
            context,
            const <String>[],
            "default",
            "traits",
        );
        return _analytics.identify(
            userId: userId,
            userTraits: UserTraits.fromJson(injected.data),
            enrichment: _contextEnrichment(injected.context),
        );
    }

    Future<void> identify({String? userId, required IdentifyDefault traits, Map<String, dynamic>? context}) {
        return identifyDefault(userId: userId, traits: traits, context: context);
    }

    Future<void> trackCartViewedDefault(TrackCartViewedDefault properties, {Map<String, dynamic>? context}) {
        final injected = _withSchemaVersion(
            _toJsonMap(properties),
            context,
            const <String>[],
            "default",
            "properties",
        );
        return _analytics.track(
            "Cart Viewed",
            properties: injected.data,
            enrichment: _contextEnrichment(injected.context),
        );
    }

    Future<void> trackCartViewed(TrackCartViewedDefault properties, {Map<String, dynamic>? context}) {
        return trackCartViewedDefault(properties, context: context);
    }
}
"
`;
